[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
log = "0.4.0"
env_logger = "0.10.0"
thiserror = "1.0.38"
bytes = "1.4.0"
prost = "0.11.8"
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.1"
jammdb = "0.9.0"
fs2 = "0.4.3"
memmap2 = "0.5.10"
fs_extra = "1.3.0"
criterion = "0.4.0"
rand = "0.8.5"


